--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,31 +1,37 @@
 <h1>
   Shopping Cart
 </h1>
-<ng-container *ngIf="cart$ | async as cart">
+<div class="row col-10" *ngIf="cart$ | async as cart">
   <p>
     You have {{ cart.totalItemsCount }} items in your shopping cart.
   </p>
   <table class="table">
     <thead>
+      <th></th>
       <th>Product</th>
-      <th>Quantity</th>
-      <th>Price</th>
+      <th class="text-center" style="width: 230px;">Quantity</th>
+      <th class="text-right" style="width: 200px;">Price</th>
     </thead>
     <tbody>
       <tr *ngFor="let item of cart.items">
-        <td>{{ item.product.title }}</td>
         <td>
-          <product-quantity [product]="item.product" [shopping-cart]="cart"></product-quantity>
+          <div class="thumbnail" [style.backgroundImage]="'url(' + item.imageUrl + ')'"></div>
         </td>
-        <td>{{ item.totalPrice | currency }}</td>
+        <td>{{ item.title }}</td>
+        <td>
+          <product-quantity [product]="item" [shopping-cart]="cart"></product-quantity>
+        </td>
+        <td class="text-right">{{ item.totalPrice | currency }}</td>
       </tr>
     </tbody>
     <tfoot>
       <tr>
         <th></th>
         <th></th>
-        <th>{{ cart.totalPrice | currency }}</th>
+        <th></th>
+        <th class="text-right">{{ cart.totalPrice | currency }}</th>
       </tr>
     </tfoot>
   </table>
-</ng-container>
+  <button (click)="clearCart()"class="btn btn-danger btn-sm">Clear Shopping Cart</button>
+</div>
